Combos: control de disponibilidad y agregar al carrito. Se agrega la columna VENDIDO a la tabla COMBO de la bbdd. Se agrega el atributo VENDIDO al modelo COMBO. En la bbdd se agregan la tabla COMBO_CARRITO y la vista VISTA_COMBO_CARRITO. Se crea el modelo COMBO_CARRITO

--- a/App/templates/carrito/mostrarCarrito.html
+++ b/App/templates/carrito/mostrarCarrito.html
@@ -108,17 +108,18 @@
                     <th class="precio">Precio</th>
                     <th class="accion">Acción</th>
                 </tr>
-                {% for e in data %}
+                <!-- EJEMPLARES -->
+                {% for ejemplar in ejemplares %}
                     <tr>
-                        <td style="text-align:left;padding-left: 10px;">{{ e[4] }}</td>
-                        <td>${{ e[9] }}</td>
+                        <td style="text-align:left;padding-left: 10px;">{{ ejemplar[4] }}</td>
+                        <td>${{ ejemplar[9] }}</td>
                         <td>
                             <table>
                                 <tr>
                                     <td class="botones">
                                         <form action="verProducto" method="POST">
                                             <div>
-                                                <input value="{{e[3]}}" type="hidden" class="form-control" name="id" id="id">
+                                                <input value="{{ejemplar[3]}}" type="hidden" class="form-control" name="id" id="id">
                                                 <button class="verProducto" type="submit"><i class="fa fa-eye" aria-hidden="true"></i></button>
                                             </div>
                                         </form>
@@ -126,9 +127,42 @@
                                     <td class="botones">
                                         <form action="eliminarEjemplar_carrito" method="POST">
                                             <div>
-                                                <input value="{{e[1]}}" type="hidden" class="form-control" name="numeroSerie" id="numeroSerie">
-                                                <input value="{{e[0]}}" type="hidden" class="form-control" name="idCarrito" id="idCarrito">
-                                                <input value="{{e[9]}}" type="hidden" class="form-control" name="precioProducto" id="precioProducto">
+                                                <input value="{{ejemplar[1]}}" type="hidden" class="form-control" name="numeroSerie" id="numeroSerie">
+                                                <input value="{{ejemplar[0]}}" type="hidden" class="form-control" name="idCarrito" id="idCarrito">
+                                                <input value="{{ejemplar[9]}}" type="hidden" class="form-control" name="precioProducto" id="precioProducto">
+                                                <input value="{{total}}" type="hidden" class="form-control" name="totalCarrito" id="totalCarrito">
+                                                <button class="quitarProducto" type="submit"><i class="fa fa-times" aria-hidden="true"></i></button>
+                                            </div>
+                                        </form>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                {% endfor %}
+
+                <!-- COMBOS -->
+                {% for combo in combos %}
+                    <tr>
+                        <td style="text-align:left;padding-left: 10px;">{{ combo[2] }}</td>
+                        <td>${{ combo[3] }}</td>
+                        <td>
+                            <table>
+                                <tr>
+                                    <td class="botones">
+                                        <form action="mostrarComboAlUsuario" method="POST">
+                                            <div>
+                                                <input value="{{combo[1]}}" type="hidden" class="form-control" name="id" id="id">
+                                                <button class="verProducto" type="submit"><i class="fa fa-eye" aria-hidden="true"></i></button>
+                                            </div>
+                                        </form>
+                                    </td>
+                                    <td class="botones">
+                                        <form action="eliminarCombo_carrito" method="POST">
+                                            <div>
+                                                <input value="{{combo[1]}}" type="hidden" class="form-control" name="idCombo" id="idCombo">
+                                                <input value="{{combo[0]}}" type="hidden" class="form-control" name="idCarrito" id="idCarrito">
+                                                <input value="{{combo[3]}}" type="hidden" class="form-control" name="totalConDescuento" id="totalConDescuento">
                                                 <input value="{{total}}" type="hidden" class="form-control" name="totalCarrito" id="totalCarrito">
                                                 <button class="quitarProducto" type="submit"><i class="fa fa-times" aria-hidden="true"></i></button>
                                             </div>
