--- a/App/templates/combo/listadoCombo.html
+++ b/App/templates/combo/listadoCombo.html
@@ -97,14 +97,14 @@
                                                 <div class="nombre">
                                                     <h4 style="text-align: center;">{% print(dato[1])%}</h4>
                                                     <div class="precio">
-                                                        ${% print(dato[3])%}
+                                                        ${% print(dato[2])%}
                                                     </div>
                                                 </div>
                                             </button>
                                         </form>
                                     </div>
                                     <div class="comprar">
-                                        <form action="comprar" method="POST">
+                                        <form action="agregarComboAlCarrito" method="POST">
                                             <div style="padding: 0px;padding-top: 2px;" class="form-group">
                                             <input value="{{dato[0]}}" type="hidden" class="form-control" name="id" id="id">
                                             <button class="btn-comprar" type="submit">COMPRAR</button>
