Ficha producto: se agrega el carrusel de las imagenes. Se cambia el navbar de todas las vistas del usuario administrador

--- a/App/templates/combo/comboModificado.html
+++ b/App/templates/combo/comboModificado.html
@@ -8,7 +8,7 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar.html' %} {% if data == 1 %}
+            {% include 'navbars/navbar_admin.html' %} {% if data == 1 %}
             <h2>Combo Modificado!</h2>
             {% else %}
             <h2>Combo no existe!</h2>
