--- a/App/templates/combo/modificarCombo.html
+++ b/App/templates/combo/modificarCombo.html
@@ -8,7 +8,7 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar.html' %}
+            {% include 'navbars/navbar_admin.html' %}
             <div class="container p-2">
                 <h2>Modificar Combo</h2>
                 <form action="{{ url_for('editarCombo') }}" method="POST">
