--- a/App/templates/rol/rolEliminado.html
+++ b/App/templates/rol/rolEliminado.html
@@ -7,7 +7,7 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar.html' %} {% if data == 1 %}
+            {% include 'navbars/navbar_admin.html' %} {% if data == 1 %}
             <h2>Rol Eliminado!</h2>
             {% else %}
             <h2>Rol No Existe!</h2>
