--- a/App/templates/combo/cargarEjemplaresAlCombo.html
+++ b/App/templates/combo/cargarEjemplaresAlCombo.html
@@ -8,7 +8,7 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar.html' %}
+            {% include 'navbars/navbar_admin.html' %}
             <div class="container p-2">
                 <center>
                     <h2>{{data['nombreCombo']}}</h2>
