--- a/App/templates/ejemplar/modificarEjemplar.html
+++ b/App/templates/ejemplar/modificarEjemplar.html
@@ -3,7 +3,7 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% include 'navbars/navbar.html' %}
+    {% include 'navbars/navbar_admin.html' %}
     <div class="container p-2">
         <h2>Modificar ejemplar</h2>
         <form action="editarEjemplar" method="POST">
