--- a/App/templates/producto/bajaProducto.html
+++ b/App/templates/producto/bajaProducto.html
@@ -3,7 +3,7 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% include 'navbars/navbar.html' %}
+    {% include 'navbars/navbar_admin.html' %}
     <div class="container p-2">
         <h2>Baja producto</h2>
         <form action="eliminarProducto" method="POST">
