--- a/App/templates/producto/fichaProducto.html
+++ b/App/templates/producto/fichaProducto.html
@@ -3,6 +3,11 @@
 {% include 'header/header.html' %}
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <style>
   .card-deck{
@@ -17,14 +22,13 @@
     margin-left:5px;
     margin-bottom:2px;
     margin-top: 5px;
+    border: none;
   }
   .imagen{
     display:block;
     margin:auto;
-    width: 300px;
-    border-radius: 20px;
-    width: 150px;
-    height: 200px;
+    width: 400px;
+    height: 400px;
   }
   .card{
     border-radius: 20px;
@@ -36,23 +40,82 @@
   .card-text{
     text-align: left;
     font-size: 20px;
+    color: black;
+    margin-left: 10px;
+  }
+  section.awSlider{
+    margin:30px auto;
+    padding:30px;
+    position:relative;
+    display:table;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  section.awSlider img{
+    pointer-events: none;
+  }
+
+  section.awSlider > img{
+    position:absolute;
+    top:30px;
+    z-index:1;
+    transition:all .3s;
+    filter: blur(1.8vw);
+    -webkit-filter: blur(2vw);
+    -moz-filter: blur(2vw); 
+    -o-filter: blur(2vw); 
+    -ms-filter: blur(2vw);
+    -ms-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    opacity:.5;
   }
 </style>
 
 <body>
     <div class="d-flex" id="wrapper">
-        {% include 'navbars/sidebar_usuarios.html' %}
+        {% include 'navbars/sidebar.html' %}
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_admin.html' %}        
-            <!-- <a href="{{ url_for('listarProductos') }}" class="btn btn-success"><span class="fa fa-arrow-left"></span></a> -->
             <div class="container p-2">
               <div class="card-deck">
                   <div class="card">
-                    <img src="https://w7.pngwing.com/pngs/338/779/png-transparent-drawing-personal-computer-desktop-computers-computer-angle-furniture-rectangle.png" class="imagen" alt="">
-                    <!-- <img src="static/img/fondo-login.png" class="imagen" alt="..."> -->
+                    <section class="awSlider">
+                      <div  class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner" role="listbox">
+                          {% for foto in range(cantidadFotos) %}
+                            {% if foto == 0 %}
+                              <div class="item active">
+                                <img class="imagen" src="{{fotos[foto][0]}}">
+                              </div>
+                            {%endif%}
+                            {% if foto != 0 %}
+                              <div  class="item">
+                                <img class="imagen" src="{{fotos[foto][0]}}">
+                              </div>
+                            {%endif%}
+                          {%endfor%}
+                        </div>
+                    
+                        <!-- Controls -->
+                        <a class="left carousel-control" href=".carousel" role="button" data-slide="prev">
+                          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                          <span class="sr-only">Geri</span>
+                        </a>
+                        <a class="right carousel-control" href=".carousel" role="button" data-slide="next">
+                          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                          <span class="sr-only">İleri</span>
+                        </a>
+                      </div>
+                    </section>
                     <div class="card-body">
                       <center>
-                        <h2 class="card-title">{{data[1]}}</h2>
+                        <h2  style="color: black;" class="card-title">{{data[1]}}</h2>
                         <p class="card-text">Descripción: {{data[2]}}</p>
                         <p class="card-text">Modelo: {{data[4]}}</p>
                         <p class="card-text">Garantía: {{data[5]}} meses</p>
