--- a/App/templates/producto/verProducto.html
+++ b/App/templates/producto/verProducto.html
@@ -97,7 +97,7 @@
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar_usuarios.html' %}
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar_usuario_logueado.html' %}        
+            {% include 'navbars/navbar_admin.html' %}        
             <!-- <a href="{{ url_for('listarProductos') }}" class="btn btn-success"><span class="fa fa-arrow-left"></span></a> -->
             <div class="container p-2">
               <div class="card-deck">
