--- a/App/templates/rol/altaRol.html
+++ b/App/templates/rol/altaRol.html
@@ -7,7 +7,7 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar.html' %}
+            {% include 'navbars/navbar_admin.html' %}
             <div class="container-fluid p-2">
                 <div class="card p-3 shadow">
                     <h2>Alta Rol</h2>
