--- a/App/templates/tipoProducto/modificarTipoProducto.html
+++ b/App/templates/tipoProducto/modificarTipoProducto.html
@@ -3,7 +3,7 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% include 'navbars/navbar.html' %}
+    {% include 'navbars/navbar_admin.html' %}
     <div class="container p-2">
         <h2>Modificar tipo de producto</h2>
         <form action="{{ url_for('editarTipoProducto') }}" method="POST">
