--- a/App/templates/navbars/sidebar.html
+++ b/App/templates/navbars/sidebar.html
@@ -57,7 +57,7 @@
         </div>
         <!--</li>-->
         <a href="{{ url_for('comboABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos <i class="fas fa-angle-right"></i></a>
-        <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-shopping-cart"></i> Compras <i class="fas fa-angle-right"></i></a>
+        <a href="{{ url_for('ventas') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-shopping-cart"></i> Ventas <i class="fas fa-angle-right"></i></a>
         
         <nav>
             <ul>
