--- a/App/templates/combo/comboABMC.html
+++ b/App/templates/combo/comboABMC.html
@@ -99,7 +99,7 @@
             formatter: function(value, row, index) {
                 var urlModificar = "{{ url_for('modificarCombo') }}"; //jinja Template
                 var urlEliminar = '{{ url_for("eliminarCombo") }}'; //jinja Template
-                var urlVer = '{{ url_for("verCombo") }}';
+                var urlVer = '{{ url_for("mostrarCombo") }}';
 
                 var html = '';
                 //html += '<a id="verRol' + row.id + '" class="btn btn-info m-2"><i class="fas fa-eye"></i></a>';
