--- a/App/templates/compra/detalleCompra.html
+++ b/App/templates/compra/detalleCompra.html
@@ -99,10 +99,34 @@
                     <th class="producto">Producto</th>
                     <th class="precio">Precio</th>
                 </tr>
-                {% for e in data %}
+                {% for ejemplar in ejemplares %}
                     <tr>
-                        <td style="text-align:left;padding-left: 10px;">{{ e[4] }}</td>
-                        <td>${{ e[9] }}</td>
+                        <td style="text-align:left;padding-left: 10px;">{{ ejemplar[4] }}</td>
+                        <td>${{ ejemplar[9] }}</td>
+                        <td class="botones">
+                            <form action="fichaProducto" method="POST">
+                                <div>
+                                    <input value="{{ejemplar[3]}}" type="hidden" class="form-control" name="id" id="id">
+                                    <button class="verProducto" type="submit"><i class="fa fa-eye" aria-hidden="true"></i></button>
+                                </div>
+                            </form>
+                        </td>
+                    </tr>
+                {% endfor %}
+
+                <!-- COMBOS -->
+                {% for combo in combos %}
+                    <tr>
+                        <td style="text-align:left;padding-left: 10px;">{{ combo[2] }}</td>
+                        <td>${{ combo[3] }}</td>
+                        <td class="botones">
+                            <form action="mostrarComboAlUsuario" method="POST">
+                                <div>
+                                    <input value="{{combo[1]}}" type="hidden" class="form-control" name="id" id="id">
+                                    <button class="verProducto" type="submit"><i class="fa fa-eye" aria-hidden="true"></i></button>
+                                </div>
+                            </form>
+                        </td>
                     </tr>
                 {% endfor %}
             </table>
