--- a/App/templates/compra/detalleVenta.html
+++ b/App/templates/compra/detalleVenta.html
@@ -122,7 +122,7 @@
                         <td style="text-align:left;padding-left: 10px;">{{ combo[2] }}</td>
                         <td>${{ combo[3] }}</td>
                         <td class="botones">
-                            <form action="mostrarComboAlUsuario" method="POST">
+                            <form action="mostrarCombo" method="POST">
                                 <div>
                                     <input value="{{combo[1]}}" type="hidden" class="form-control" name="id" id="id">
                                     <button class="verProducto" type="submit"><i class="fa fa-eye" aria-hidden="true"></i></button>
