--- a/App/templates/ejemplar/altaEjemplar.html
+++ b/App/templates/ejemplar/altaEjemplar.html
@@ -15,14 +15,13 @@
                         <label for="numeroSerie">Número de serie del ejemplar</label>
                         <input type="text" class="form-control" name="numeroSerie" id="numeroSerie" placeholder="Ingresar el número de serie del ejemplar">
                     </div>
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label for="vendido">¿Producto vendido? (0: False - 1:True)</label>
                         <select name="vendido" class="custom-select">
-                    <option value="0">No - (False)</option>
-                    <option value="1">Si - (True)</option>
-                </select>
-
-                    </div>
+                            <option value="0">No - (False)</option>
+                            <option value="1">Si - (True)</option>
+                        </select>
+                    </div> -->
                     <div class="form-group">
                         <label for="producto">Producto</label>
                         <select name="producto" class="custom-select">
