--- a/App/templates/admin/index_admin.html
+++ b/App/templates/admin/index_admin.html
@@ -39,11 +39,15 @@
             padding-bottom: 20px;
         }
         .tabla{
-            margin-top: 150px;
+            margin-top: 20px;
             margin-bottom: 30px;
         }
         .columna{
             vertical-align: top;
+        }
+        .banner{
+            margin-top: 50px;
+            text-align: center;
         }
     </style>
 </head>
@@ -56,6 +60,10 @@
         {% include 'navbars/sidebar.html' %}
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_admin.html' %}
+
+            <div class="banner">
+                <img src="..\static\img\banner.png" height="100">
+            </div>
 
             <table class="tabla">
                 <tr class="fila">
