--- a/App/templates/navbars/sidebar.html
+++ b/App/templates/navbars/sidebar.html
@@ -35,7 +35,8 @@
 </style>
 <div class="bg-light border-right" id="sidebar-wrapper">
     <!--<div class="sidebar-heading">Start Bootstrap </div>-->
-    <a style="height: 50px;margin-top: 10px;" class="navbar-brand mb-0 h1 p-2" href="/"> <i class="fas fa-keyboard"></i> App Taller 2019</a>
+    <!-- <a style="height: 50px;margin-top: 10px;" class="navbar-brand mb-0 h1 p-2" href="/"> <i class="fas fa-keyboard"></i> App Taller 2019</a> -->
+    <a href="/"> <img src="..\static\img\banner.png" height="58px"> </a>
     <div class="list-group list-group-flush">
         <a href="{{ url_for('usuarioABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Usuarios <i class="fas fa-angle-right"></i> </a>
         <a href="{{ url_for('tipoProductoABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-laptop"></i> Tipo de Productos <i class="fas fa-angle-right"></i></a>
