--- a/App/templates/navbars/sidebar_usuarios.html
+++ b/App/templates/navbars/sidebar_usuarios.html
@@ -1,5 +1,6 @@
 <div class="bg-light border-right" id="sidebar-wrapper">
-    <a style="height: 50px;margin-top: 10px;" class="navbar-brand mb-0 h1 p-2" href="/"> <i class="fas fa-keyboard"></i> App Taller 2019</a>
+    <!-- <a style="height: 50px;margin-top: 10px;" class="navbar-brand mb-0 h1 p-2" href="/"> <i class="fas fa-keyboard"></i> App Taller 2019</a> -->
+    <a href="/"> <img src="..\static\img\banner.png" height="58px"> </a>
     <div class="list-group list-group-flush">
         <a href="{{ url_for('index') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-home"></i> Inicio</a>
         <a href="{{ url_for('listarTipoProducto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Categorías </a>
